--- a/Diaporama/Base.lproj/Main.storyboard
+++ b/Diaporama/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,72 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Diaporama" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DeV-6F-RPH">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                                <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="anim_cat_big_1" translatesAutoresizingMaskIntoConstraints="NO" id="Pwg-Zw-K0P">
+                                <rect key="frame" x="0.0" y="44" width="414" height="256"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Pwg-Zw-K0P" secondAttribute="height" multiplier="207:128" id="nxI-zy-ZQK"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GmF-3d-87h">
+                                <rect key="frame" x="0.0" y="270" width="414" height="592"/>
+                                <color key="backgroundColor" red="0.83216959239999999" green="0.98548370600000001" blue="0.47333085539999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="DxL-kd-CDT">
+                                <rect key="frame" x="28" y="361" width="358" height="31"/>
+                                <connections>
+                                    <action selector="slider_animSpeedChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="F4S-vK-z1j"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anim speed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hnJ-R9-LnY">
+                                <rect key="frame" x="0.0" y="320" width="414" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="DxL-kd-CDT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="03T-YE-hC3"/>
+                            <constraint firstItem="GmF-3d-87h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0XZ-rw-IF7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GmF-3d-87h" secondAttribute="trailing" id="4eb-ef-6DC"/>
+                            <constraint firstItem="DxL-kd-CDT" firstAttribute="top" secondItem="hnJ-R9-LnY" secondAttribute="bottom" constant="20" id="AGj-6N-Sen"/>
+                            <constraint firstItem="DxL-kd-CDT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="H9i-Zo-CSb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DxL-kd-CDT" secondAttribute="trailing" constant="30" id="Jos-32-Oio"/>
+                            <constraint firstItem="hnJ-R9-LnY" firstAttribute="top" secondItem="Pwg-Zw-K0P" secondAttribute="bottom" constant="20" id="Ksm-VG-lAk"/>
+                            <constraint firstItem="DeV-6F-RPH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="SIi-Fi-Oqb"/>
+                            <constraint firstItem="DeV-6F-RPH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="T0Z-bk-qH2"/>
+                            <constraint firstItem="hnJ-R9-LnY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TRh-Gp-YIw"/>
+                            <constraint firstItem="GmF-3d-87h" firstAttribute="top" secondItem="Pwg-Zw-K0P" secondAttribute="bottom" constant="-30" id="UGG-aF-wSd"/>
+                            <constraint firstItem="Pwg-Zw-K0P" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Wps-nb-M7p"/>
+                            <constraint firstItem="Pwg-Zw-K0P" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YXz-Og-4Ak"/>
+                            <constraint firstAttribute="bottom" secondItem="GmF-3d-87h" secondAttribute="bottom" constant="34" id="ZqL-Lf-QMW"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="DeV-6F-RPH" secondAttribute="bottom" constant="562" id="mcr-rJ-jqf"/>
+                            <constraint firstItem="Pwg-Zw-K0P" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="44" id="tu5-7I-Br9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DeV-6F-RPH" secondAttribute="trailing" id="w8k-Fp-h0A"/>
+                            <constraint firstItem="hnJ-R9-LnY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xAB-4j-KaB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hnJ-R9-LnY" secondAttribute="trailing" id="xzE-SC-MhL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="ui_anim_imageview" destination="Pwg-Zw-K0P" id="mw8-0n-wFl"/>
+                        <outlet property="ui_sliderSpeed" destination="DxL-kd-CDT" id="Zr5-TM-NZl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="anim_cat_big_1" width="512" height="256"/>
+    </resources>
 </document>
