--- a/Diaporama/Base.lproj/Main.storyboard
+++ b/Diaporama/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Gnc-fM-2Xd">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Animation-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Diaporama" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,64 +18,111 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DeV-6F-RPH">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DeV-6F-RPH" userLabel="sky">
+                                <rect key="frame" x="0.0" y="140" width="414" height="248"/>
                                 <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="anim_cat_big_1" translatesAutoresizingMaskIntoConstraints="NO" id="Pwg-Zw-K0P">
-                                <rect key="frame" x="0.0" y="44" width="414" height="256"/>
+                                <rect key="frame" x="0.0" y="140" width="414" height="256"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Pwg-Zw-K0P" secondAttribute="height" multiplier="207:128" id="nxI-zy-ZQK"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GmF-3d-87h">
-                                <rect key="frame" x="0.0" y="270" width="414" height="592"/>
+                                <rect key="frame" x="0.0" y="366" width="414" height="496"/>
                                 <color key="backgroundColor" red="0.83216959239999999" green="0.98548370600000001" blue="0.47333085539999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="DxL-kd-CDT">
-                                <rect key="frame" x="28" y="361" width="358" height="31"/>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="GmF-3d-87h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0XZ-rw-IF7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GmF-3d-87h" secondAttribute="trailing" id="4eb-ef-6DC"/>
+                            <constraint firstItem="DeV-6F-RPH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="SIi-Fi-Oqb"/>
+                            <constraint firstItem="DeV-6F-RPH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="T0Z-bk-qH2"/>
+                            <constraint firstItem="GmF-3d-87h" firstAttribute="top" secondItem="Pwg-Zw-K0P" secondAttribute="bottom" constant="-30" id="UGG-aF-wSd"/>
+                            <constraint firstItem="Pwg-Zw-K0P" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Wps-nb-M7p"/>
+                            <constraint firstItem="Pwg-Zw-K0P" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YXz-Og-4Ak"/>
+                            <constraint firstAttribute="bottom" secondItem="GmF-3d-87h" secondAttribute="bottom" constant="34" id="ZqL-Lf-QMW"/>
+                            <constraint firstItem="Pwg-Zw-K0P" firstAttribute="bottomMargin" secondItem="DeV-6F-RPH" secondAttribute="bottom" id="mcr-rJ-jqf"/>
+                            <constraint firstItem="Pwg-Zw-K0P" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="tu5-7I-Br9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DeV-6F-RPH" secondAttribute="trailing" id="w8k-Fp-h0A"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Animation" id="nIL-4f-LJo">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="DNy-N7-LyQ"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="EBR-mk-3zg">
+                            <connections>
+                                <segue destination="awj-vo-f8H" kind="show" id="hTM-V4-vPh"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="ui_anim_imageview" destination="Pwg-Zw-K0P" id="mw8-0n-wFl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="957.97101449275374" y="20.758928571428569"/>
+        </scene>
+        <!--Edit-->
+        <scene sceneID="upD-ua-69G">
+            <objects>
+                <viewController id="awj-vo-f8H" customClass="ReglagesViewController" customModule="Diaporama" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZE8-EQ-WY9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="RDj-Bd-rVw">
+                                <rect key="frame" x="28" y="211" width="358" height="31"/>
                                 <connections>
-                                    <action selector="slider_animSpeedChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="F4S-vK-z1j"/>
+                                    <action selector="slider_animSpeedChanged:" destination="awj-vo-f8H" eventType="valueChanged" id="1Gg-fB-hjF"/>
                                 </connections>
                             </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anim speed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hnJ-R9-LnY">
-                                <rect key="frame" x="0.0" y="320" width="414" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anim speed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fO2-ji-gHd">
+                                <rect key="frame" x="0.0" y="170" width="414" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="DxL-kd-CDT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="03T-YE-hC3"/>
-                            <constraint firstItem="GmF-3d-87h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0XZ-rw-IF7"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GmF-3d-87h" secondAttribute="trailing" id="4eb-ef-6DC"/>
-                            <constraint firstItem="DxL-kd-CDT" firstAttribute="top" secondItem="hnJ-R9-LnY" secondAttribute="bottom" constant="20" id="AGj-6N-Sen"/>
-                            <constraint firstItem="DxL-kd-CDT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="H9i-Zo-CSb"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DxL-kd-CDT" secondAttribute="trailing" constant="30" id="Jos-32-Oio"/>
-                            <constraint firstItem="hnJ-R9-LnY" firstAttribute="top" secondItem="Pwg-Zw-K0P" secondAttribute="bottom" constant="20" id="Ksm-VG-lAk"/>
-                            <constraint firstItem="DeV-6F-RPH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="SIi-Fi-Oqb"/>
-                            <constraint firstItem="DeV-6F-RPH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="T0Z-bk-qH2"/>
-                            <constraint firstItem="hnJ-R9-LnY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TRh-Gp-YIw"/>
-                            <constraint firstItem="GmF-3d-87h" firstAttribute="top" secondItem="Pwg-Zw-K0P" secondAttribute="bottom" constant="-30" id="UGG-aF-wSd"/>
-                            <constraint firstItem="Pwg-Zw-K0P" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Wps-nb-M7p"/>
-                            <constraint firstItem="Pwg-Zw-K0P" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YXz-Og-4Ak"/>
-                            <constraint firstAttribute="bottom" secondItem="GmF-3d-87h" secondAttribute="bottom" constant="34" id="ZqL-Lf-QMW"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="DeV-6F-RPH" secondAttribute="bottom" constant="562" id="mcr-rJ-jqf"/>
-                            <constraint firstItem="Pwg-Zw-K0P" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="44" id="tu5-7I-Br9"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DeV-6F-RPH" secondAttribute="trailing" id="w8k-Fp-h0A"/>
-                            <constraint firstItem="hnJ-R9-LnY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xAB-4j-KaB"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hnJ-R9-LnY" secondAttribute="trailing" id="xzE-SC-MhL"/>
+                            <constraint firstItem="RDj-Bd-rVw" firstAttribute="leading" secondItem="b2D-zq-gJE" secondAttribute="leading" constant="30" id="4Yf-RL-ye0"/>
+                            <constraint firstItem="fO2-ji-gHd" firstAttribute="top" secondItem="b2D-zq-gJE" secondAttribute="top" constant="30" id="6Fy-Yb-CJB"/>
+                            <constraint firstItem="RDj-Bd-rVw" firstAttribute="top" secondItem="fO2-ji-gHd" secondAttribute="bottom" constant="20" id="7Pq-wl-NaZ"/>
+                            <constraint firstItem="b2D-zq-gJE" firstAttribute="trailing" secondItem="RDj-Bd-rVw" secondAttribute="trailing" constant="30" id="JIj-Jn-C81"/>
+                            <constraint firstItem="fO2-ji-gHd" firstAttribute="leading" secondItem="ZE8-EQ-WY9" secondAttribute="leading" id="Urd-mL-CsY"/>
+                            <constraint firstItem="b2D-zq-gJE" firstAttribute="trailing" secondItem="fO2-ji-gHd" secondAttribute="trailing" id="gLg-Xq-MAs"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="b2D-zq-gJE"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Edit" id="yVs-vq-NIL"/>
                     <connections>
-                        <outlet property="ui_anim_imageview" destination="Pwg-Zw-K0P" id="mw8-0n-wFl"/>
-                        <outlet property="ui_sliderSpeed" destination="DxL-kd-CDT" id="Zr5-TM-NZl"/>
+                        <outlet property="ui_sliderAnimSpeed" destination="RDj-Bd-rVw" id="pWl-dr-FEj"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X6W-g4-RIY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1747.826086956522" y="20.758928571428569"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="DK5-Vf-IqW">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gnc-fM-2Xd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="bKS-Zr-jMF">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="sHe-Bc-Zy2"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eSK-ZT-0DP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="55" y="21"/>
         </scene>
     </scenes>
     <resources>
